set(WADJET_PUBLIC_LIBRARIES)
set(WADJET_PRIVATE_LIBRARIES)

set(WADJET_PUBLIC_COMPILE_DEFINITIONS)
set(WADJET_PRIVATE_COMPILE_DEFINITIONS "WADJET_EXPORTS")

if(WIN32)
    list(APPEND WADJET_PRIVATE_LIBRARIES Ws2_32)
endif()

file(GLOB_RECURSE WADJET_SOURCES "*.cpp" "*.hpp" "${WADJET_INCLUDE_DIR}/*.hpp")

if(${WADJET_STATIC})
    add_library(wadjet STATIC ${WADJET_SOURCES})
    target_link_libraries(wadjet PUBLIC ${WADJET_PUBLIC_LIBRARIES} ${WADJET_PRIVATE_LIBRARIES})
    list(APPEND WADJET_PUBLIC_COMPILE_DEFINITIONS "WADJET_STATIC")
else()
    add_library(wadjet SHARED ${WADJET_SOURCES})
    target_link_libraries(wadjet PUBLIC ${WADJET_PUBLIC_LIBRARIES} PRIVATE ${WADJET_PRIVATE_LIBRARIES})
endif()

target_include_directories(wadjet PUBLIC ${WADJET_INCLUDE_DIR})
target_compile_definitions(wadjet PUBLIC ${WADJET_PUBLIC_COMPILE_DEFINITIONS} PRIVATE ${WADJET_PRIVATE_COMPILE_DEFINITIONS})

install(DIRECTORY ${WADJET_INCLUDE_DIR}/ DESTINATION include)
install(TARGETS wadjet)